<resources>
    <string name="app_name"></string>
    <string name="kitap_sub">Kitaplar zamanın büyük denizinde dikilmiş deniz fenerleridir.</string>
    <string name="film_sub">Sinema neyin çerçeve içinde neyin dışında kalacağı meselesidir. Martin Scorsese</string>
    <string name="uygulama_giris1">APP</string>
    <string name="uye_girisi">ÜYE GİRİŞİ</string>
    <string name="kayit_ol">KAYIT OL</string>
    <string name="kayitol">Kayıt ol</string>
    <string name="uye_degil_misin">Üye Olmak İster Misiniz?</string>
    <string name="app">APP</string>
    <string name="hintemail">Email Giriniz</string>
    <string name="gmail">.@gmail.com</string>
    <string name="hintsifre">Şifre Giriniz</string>
    <string name="txtgirisyap">GİRİŞ YAP</string>
    <string name="txtuyegirisiyap">ÜYE GİRİŞİ YAP</string>
    <string name="uye_misin">ZATEN ÜYE MİSİNİZ?</string>
    <string name="ad">Ad</string>
    <string name="soyad">Soyad</string>
    <string name="cep_telefonu">Cep Telefonu</string>
    <string name="email2">Email</string>
    <string name="sifre">Şifre</string>
    <string name="sifretekrar">Şifre Tekrar</string>
    <string name="uyelik_olustur">ÜYELİK OLUŞTUR</string>
    <string name="baslik_girin">Bir isim giriniz</string>
    <string name="offer_tipi">ÖNERİ TİPİ:</string>
    <string name="tur">Türü:</string>
    <string name="oneri">Öneriyor Musunuz?</string>
    <string name="cikis_yili">Çıkış Yılı:</string>
    <string name="cikis_yil">Çıkış Yılını Girin</string>
    <string name="not">Kullanıcı Notu:</string>
    <string name="k_not">Görüşlerinizi giriniz:</string>
    <string name="urun_ucreti">Ürün ücreti:</string>
    <string name="tl">TL</string>
    <string name="_">_______</string>
    <string name="kaydet">KAYDET</string>
    <string name="vazgec">VAZGEÇ</string>
    <string name="offer_ekle">ÖNERİ EKLE</string>
    <string name="arti">+</string>
    <string name="ad2">Ad:</string>
    <string name="soyad2">Soyad:</string>
    <string name="telefon2">Telefon:</string>
    <string name="email3">Email:</string>
    <string name="sifre2">Şifre:</string>
    <string name="sifre_tekrar2">Şifre tekrar:</string>
    <string name="kitap">kitap:</string>
    <string name="fiyat">fiyat:</string>
    <string name="duzenle_toolbar">Düzenle</string>
    <string name="sil_toolbar">Sil</string>
    <string name="profil_toolbar">Profil</string>
    <string name="profil_bilgileri">Profil bilgileri</string>
    <string name="filtrele">Filtrele</string>
    <string name="oturumu_kapat">Oturumu kapat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
